--- a/nanoforum/package.json
+++ b/nanoforum/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^7.2.1",
     "antd": "^3.26.7",
     "firebase": "^7.7.0",
+    "firebase-admin": "^8.9.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
